[package]
name = "ntp-timestamp"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
serde = ["std", "dep:serde"]
from = []

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.117"

[package.metadata.docs.rs]
features = ["serde"]
